--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 clap = { version = "4.4.6", features = ["derive"] }
 fastrand = "2.0.0"
 indicatif = { version = "0.17.7", features = ["rayon"] }
+num = "0.4.1"
 rayon = "1.8.0"
